--- a/class.ipynb
+++ b/class.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "'홍길동'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "'이성계'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -187,6 +187,298 @@
    ],
    "source": [
     "SalesMan1.sale()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 메서드 오버로딩과 오버라이딩\n",
+    "오버로딩 : 같은 이름의 메서드를 매개변수의 조합을 다르게하여 여러개 정의하는 것, 파이썬에서는 오버로딩을 지원하지 않음\n",
+    "오버라이딩 : 부모 클래스의 메서드를 재정의하는 것"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Developer(Human):\n",
+    "    def __init__(self, name, age):\n",
+    "        super(Developer, self).__init__(name, age)\n",
+    "        self.skils = []\n",
+    "\n",
+    "    def greet(self):\n",
+    "        print(f'{self.name}이 인사를 합니다. 안녕하세요')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "developer1 = Developer('이도', 32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이도이 인사를 합니다. 안녕하세요\n"
+     ]
+    }
+   ],
+   "source": [
+    "developer1.greet()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 특수 메서드\n",
+    "파이썬 클래스에서 제공하는 __메서드명__ 형태의 특수한 메서드\n",
+    "'''python\n",
+    "__repr__(self) # 인스턴스 자체 출력시 표현할 방법\n",
+    "__str__(self) # 인스턴스를 문자열로 형변환시 표현할 방법\n",
+    "__getitem__(self)\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class King():\n",
+    "    def __init__(self, number, name, ho):\n",
+    "        self.number = number\n",
+    "        self.name = name\n",
+    "        self.ho = ho\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f'King name - {self.name} / ho - {self.ho} / number - {self.number}'\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return f'이름 : {self.name} / 호 : {self.ho} / 순서 : {self.number}'\n",
+    "    \n",
+    "    def __getitem__(self, key):\n",
+    "        if key == 'number':\n",
+    "            return self.number\n",
+    "        if key == 'name':\n",
+    "            return self.name\n",
+    "        if key == 'ho':\n",
+    "            return self.ho"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seajong = King(4, '이도', '세종')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "King name - 이도 / ho - 세종 / number - 4"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seajong"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'이름 : 이도 / 호 : 세종 / 순서 : 4'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(seajong)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'이도'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seajong['name']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 외장 패키지(라이브러리)\n",
+    "외장 패키지 설치를 하기위해서는 pip로 패키지를 설치해야함\n",
+    "''' bash\n",
+    "pip install 패키지명\n",
+    "pip install scikit-learn\n",
+    "'''\n",
+    "설치한 패키지를 해당 파일에서 사용하고자 한다면\n",
+    "'''python\n",
+    "import 패키지명\n",
+    "import 패키지명 as 별명\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sklearn\n",
+    "import sklearn as sk"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "패키지에 포함된 정보를 보고 싶으면 dir() 내장 함수를 사용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['_BUILT_WITH_MESON',\n",
+       " '__SKLEARN_SETUP__',\n",
+       " '__all__',\n",
+       " '__builtins__',\n",
+       " '__cached__',\n",
+       " '__check_build',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__path__',\n",
+       " '__spec__',\n",
+       " '__version__',\n",
+       " '_built_with_meson',\n",
+       " '_config',\n",
+       " '_distributor_init',\n",
+       " 'base',\n",
+       " 'clone',\n",
+       " 'config_context',\n",
+       " 'exceptions',\n",
+       " 'externals',\n",
+       " 'get_config',\n",
+       " 'logger',\n",
+       " 'logging',\n",
+       " 'os',\n",
+       " 'random',\n",
+       " 'set_config',\n",
+       " 'setup_module',\n",
+       " 'show_versions',\n",
+       " 'sklearn',\n",
+       " 'sys',\n",
+       " 'utils']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(sk)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "패키지 내부의 다른 패키지만 임포트하고자 하면 패키지명. 하위패키지로 임포트\n",
+    "'''python\n",
+    "import 패키지명.하위패키지명\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sklearn.preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "패키지의 구성요소 중 특정한 요소만 사용하고자할 때 선택적으로 임포트할 수 있음\n",
+    "'''python\n",
+    "from 패키지명 import 구성요소\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import linear_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import *"
    ]
   }
  ],
